--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,7 @@
 .tasklist-title {
   background-image: linear-gradient(45deg, #ff8a00, #e52e71);
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
 }
 
